# GCS

./: .env.example  .eslintignore  .eslintrc.json  .eslintrc.yml  .gitattributes  .gitignore  .htmlhintrc  .remarkrc.yml  .stylelintignore  .stylelintrc  .stylelintrc.yml  .travis.yml  LICENSE  README.md  README.rst  global.d.ts  globalStyle.css  index.html  indexStyle.css  logContainer.html  logContainer.js  logContainerStyle.css  main.js  mainPageStyle.css  mapContainer.html  mapContainer.js  mission-log.js  mkdocs.yml  package.json  requirements.txt  tsconfig.json  vehicleStatusContainer.html  vehicleStatusContainerStyle.css  webpack.config.js  webpack.renderer.additions.js
.github/: dependabot.yml
BindingsTestCPP/: CMakeLists.txt  README.txt  binding.gyp  go  index.html  main.cpp  main.js  package-lock.json  package.json  quickDoc.txt  test.js  v8Utilities.cpp  v8Utilities.hpp
BindingsTestCPP/include/: Frame.hpp  SerialXbee.hpp
BindingsTestCPP/src/: ReceivePacket.cpp  SerialXbee.cpp  Utility.cpp
code/: CMakeLists.txt  README.txt  globalStyle.css  index.html  main.js  package-lock.json  package.json
doc/: Changelog.docx  Guide to Mission Control.docx  README.md
docs/: conf.py  contributing.rst  index.rst
logElement/: log.js  logContainer.html
mapElement/: map.js  mapContainer.html  mapContainer.js  mapContainerStyle.css  mapStyle.css
missionSetupElement/: missionSetupContainer.html  missionSetupContainerStyle.css
old-src/: index.html  indexStyle.css
resources/: ProtoPackets.proto  config.json  index.js  locations.conf  locations.json  mac-address.json
script/: webhook.sh
src/: index.html  index.js
(+266 files in other folders)
